Fix home hero on mobile for Firefox.

--- a/assets/sass/pages/home.scss
+++ b/assets/sass/pages/home.scss
@@ -22,7 +22,7 @@
     z-index: 2;
     height: 50%;
     position: relative;
-    display: block;
+    display: table;
   }
 }
 
